--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==5.1.0
-psycopg2==2.7.4
+psycopg2-binary==2.7.4
 pycodestyle==2.4.0
 pylint==1.8.4
 pytz==2018.4
